# kcmh-pct-geant4

./: .gitignore  CMakeLists.txt  README.md  beam_kcmh.mac  beam_paralell.mac  beam_point.mac  init_vis.mac  pctKCMH.cc  pctKCMH_mul.py  run.mac  run_noph.mac  vis.mac
condor/: loop10condor.sh  run_geant4.sh  submit.condor
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorMessager.hh  DetectorMessenger.hh  EventAction.hh  LynxDetectorConstruction.hh  LynxTrackerSD.hh  PctDetectorConstruction.hh  PctTrackerSD.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  RunActionMessenger.hh  TrackerHit.hh  TrackerSD.hh  phantomConstruction.hh  utils.hh
scripts/: main.py  main_mulprc.py  test.ipynb
scripts/data/: proton_air.csv
scripts/data/proton_ranges/: aluminium.csv  silicon.csv  water.csv
scripts/modules/: analyse.py  beam.py  constants.py  physics.py  plots.py  utils.py
scripts/output/data/: proton_range.csv
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessager.cc  DetectorMessenger.cc  EventAction.cc  LynxDetectorConstruction.cc  LynxTrackerSD.cc  PctDetectorConstruction.cc  PctTrackerSD.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  RunActionMessenger.cc  TrackerHit.cc  TrackerSD.cc  phantomConstruction.cc
